--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Let&#39;s work together! by descho</title>
+    <title>FutureGov, let's work together!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,14 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Let&#39;s work together!</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/descho/proposal" class="btn">View on GitHub</a>
-      <a href="https://github.com/descho/proposal/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/descho/proposal/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="what-i-can-do" class="anchor" href="#what-i-can-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What I can do</h3>
+      <h3>What I can do</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
@@ -33,6 +29,8 @@
 <a id="what-i-expect-from-you" class="anchor" href="#what-i-expect-from-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>What I expect from you</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<a href="#" class="btn">View on GitHub</a>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/descho/proposal">Let&#39;s work together!</a> is maintained by <a href="https://github.com/descho">descho</a>.</span>
