--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <section class="page-header">
+      <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let&#39;s work together!</h1>
-      <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
     </section>
 
     <section class="main-content">
