--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <section class="page-header">
       <p>Dear Carrie & Dom,</p>
-      <h1 class="project-name">Let&#39;s work together!</h1>
-      <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      <h1 class="project-name">Let’s work together!</h1>
+      <p>My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project in the area of designing public services. I'd love to spend 3 months of that time working with you. Please continue reading to find out what I can  offer.</p>
     </section>
 
     <section class="main-content">
