--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <section class="page-header">
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
-      <p>My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project in the area of designing public services. I'd love to spend 3 months of that time working with you. Please continue reading to find out what I can  offer.</p>
+      <p>My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project in the area of designing public services. I’d love to spend some of that time working with you, because I love your work and your team’s dance moves! Please continue reading to find out what I can offer.</p>
     </section>
 
     <section class="main-content">
-      <h3>What I can do</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
+What I can do</h3>
+<p>
+People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m naturally curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Since every project is different and our industry is constantly evolving, my curiosity helps me fill gaps that I can identify. 
+</p>
 <h3>
-<a id="what-experience-i-have" class="anchor" href="#what-experience-i-have" aria-hidden="true"><span class="octicon octicon-link"></span></a>What experience I have</h3>
+What experience I have</h3>
 
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
-<a id="what-i-expect-from-you" class="anchor" href="#what-i-expect-from-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>What I expect from you</h3>
+What I expect from you</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
