--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     </section>
 
     <section class="main-content">
-What I can do</h3>
+<h3>
+My Superpower</h3>
 <p>
-People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m naturally curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Since every project is different and our industry is constantly evolving, my curiosity helps me fill gaps that I can identify. 
+People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m <strong>naturally curios</strong>. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Since every project is different and our industry is constantly evolving, my curiosity helps me fill gaps that I can identify. 
 </p>
 <h3>
 What experience I have</h3>
