--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <section class="page-header">
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
-      <p>My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project in the area of designing public services. I’d love to spend some of that time working with you, because I love your work and your team’s dance moves! Please continue reading to find out what I can offer.</p>
-    </section>
+      <p>
+      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I love your work and your team’s dance moves! Please continue reading to find out how we can help each other.
+      </p>
+      </section>
 
     <section class="main-content">
 <h3>
