--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@ My Superpower</h3>
 People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m <strong>naturally curios</strong>. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Since every project is different and our industry is constantly evolving, my curiosity helps me fill gaps that I can identify. 
 </p>
 <h3>
-What experience I have</h3>
+My Ambition</h3>
 
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
-What I expect from you</h3>
+What Makes me Angry</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
+<p>
+  One thing that makes me angry, are forms. https://twitter.com/allafarce/status/626960212210008064 Bad forms, both offline and online are representative of evil or negligent organisations that don’t care about people. They ask them to fill in things they already know, or can find out from context. They are difficult to understand, make people feel stupid and prevent them from getting their job done. They violate privacy for the sake of marketing. 
+</p>
 <a href="#" class="btn">View on GitHub</a>
 
       <footer class="site-footer">
