--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ My Ambition</h3>
 What Makes me Angry</h3>
 
 <p>
-  One thing that makes me angry, are forms. https://twitter.com/allafarce/status/626960212210008064 Bad forms, both offline and online are representative of evil or negligent organisations that don’t care about people. They ask them to fill in things they already know, or can find out from context. They are difficult to understand, make people feel stupid and prevent them from getting their job done. They violate privacy for the sake of marketing. 
+  One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce/status/626960212210008064" target="_blank">Bad forms</a>, both offline and online are representative of evil or negligent organisations that don’t care about people. They ask them to fill in things they already know, or can find out from context. They are difficult to understand, make people feel stupid and prevent them from getting their job done. They violate privacy for the sake of marketing. 
 </p>
 <a href="#" class="btn">View on GitHub</a>
 
