--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I love your work and your team’s dance moves! Please continue reading to find out how we can help each other.
+      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how we can help each other.
       </p>
       </section>
 
