--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how we can help each other.
+      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can help each other.
       </p>
       </section>
 
     <section class="main-content">
+<h3>My Experience</h3>
+<p>
+  I’ve worked within multidisciplinary agile teams both in startup and agency environments. In startup world I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need. My biggest learning from Hyper Island has been when to diverge and when to converge and how to make sure that the whole team is on the same page. You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
+</p>
 <h3>
 My Superpower</h3>
 <p>
-People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m <strong>naturally curios</strong>. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Since every project is different and our industry is constantly evolving, my curiosity helps me fill gaps that I can identify. 
+  People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m naturally curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Random day-to-day things that spark my curiosity sometimes end up in my <a href="http://instagram.com/descho/" target="_blank">Instagram feed</a>. 
 </p>
 <h3>
-My Ambition</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
 What Makes me Angry</h3>
-
 <p>
   One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce/status/626960212210008064" target="_blank">Bad forms</a>, both offline and online are representative of evil or negligent organisations that don’t care about people. They ask them to fill in things they already know, or can find out from context. They are difficult to understand, make people feel stupid and prevent them from getting their job done. They violate privacy for the sake of marketing. 
 </p>
