--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ How Can We Help Each Other</h3>
 I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
 </p>
 <p class="cta">
-  <a href="#" class="btn">View on GitHub</a>
+  <a href="mailto:dessy@chongarova.com" class="btn">Interested? Get in touch.</a>
 </p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/descho/proposal">Let’s work together!</a> is maintained by <a href="https://github.com/descho">descho</a>.</span>
