--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
   <a href="mailto:dessy@chongarova.com" class="btn">Interested? Drop me an email.</a>
 </p>
 <p class="cta">
-  Or <a href="https://twitter.com/des_cho">tweet at me.</a>
+  Or <a href="https://twitter.com/des_cho"><strong>tweet at me</strong></a>.
 </p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/descho/proposal">Let’s work together!</a> is maintained by <a href="https://github.com/descho">descho</a>.</span>
