--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ How Can We Help Each Other</h3>
 <p>
 I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
 </p>
-<p class="cta">
+<p class="cta cta-main">
   <a href="mailto:dessy@chongarova.com" class="btn">Interested? Drop me an email.</a>
 </p>
 <p class="cta">
