--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <section class="main-content">
 <h3>My Experience</h3>
 <p>
-I’ve worked within multidisciplinary agile teams both in startup and agency environments. In startup world I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need. At Hyper Island I worked with clients like the BBC and Future Cities Catapult and I learned about co-design and prototyping with communities. I participated in and facilitated team development with techniques like feedback and reflection. 
-<p> 
-</p>
-You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
+I’ve worked within multidisciplinary agile teams both in startup and agency environments. In startup world I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need. 
+</p><p> 
+At Hyper Island I worked with clients like the BBC and Future Cities Catapult and I learned about co-design and prototyping with communities. I participated in and facilitated team development with techniques like feedback and reflection. You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
 </p>
 <h3>
 My Superpower</h3>
@@ -44,10 +43,10 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
 <p class="cta cta-main">
   <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
 </p>
-<!--      <footer class="site-footer">
+      <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> especially for <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
         <span class="site-footer-credits">With help from the <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a href="https://twitter.com/jasonlong">Jason Long</a>. Hosted by <a href="https://pages.github.com">GitHub Pages</a>.</span>
-      </footer> -->
+      </footer> 
     </section>
   </body>
 </html>
