--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
 </p>
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> especially for <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
-        <span class="site-footer-credits">With help from the <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a href="https://twitter.com/jasonlong">Jason Long</a>. Hosted by <a href="https://pages.github.com">GitHub Pages</a>.</span>
+        <span class="site-footer-credits">With help from the <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
       </footer> 
     </section>
   </body>
