--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
   <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
 </p>
       <footer class="site-footer">
-        <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> especially for <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
-        <span class="site-footer-credits">With help from the <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
+        <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
+        <span class="site-footer-credits">With help from <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
       </footer> 
     </section>
   </body>
