--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can help each other.
+      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can colaborate.
       </p>
-      </section>
-
+    </section>
     <section class="main-content">
-<h3>My Experience</h3>
-<p>
+      <h3>My Experience</h3>
+      <p>
 I’ve worked within multidisciplinary agile teams both in startup and agency environments. In startup world I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need. 
-</p><p> 
+      </p>
+      <p> 
 At Hyper Island I worked with clients like the BBC and Future Cities Catapult and I learned about co-design and prototyping with communities. I participated in and facilitated team development with techniques like feedback and reflection. You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
-</p>
-<h3>
-My Superpower</h3>
-<p>
-  People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m simply curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Random day-to-day things that spark my curiosity sometimes end up on <a href="http://instagram.com/descho/" target="_blank">my Instagram feed</a>. 
-</p>
-<!--<h3>
-What Makes me Angry</h3>
-<p>
-  One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce/status/626960212210008064" target="_blank">Bad forms</a>, both offline and online are representative of evil or negligent organisations that don’t care about people. Asking users to fill in details the system already know, or can find out context shows disrespect. Forms that are difficult to understand, make people feel stupid and prevent them from getting their job done. Furthermore, they often violate privacy for the sake of marketing. 
-</p>-->
-<h3>
-How Can We Help Each Other</h3>
-<p>
+      </p>
+      <h3>My Superpower</h3>
+      <p>
+People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m simply curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Random day-to-day things that spark my curiosity sometimes end up on <a href="http://instagram.com/descho/" target="_blank">my Instagram feed</a>. 
+      </p>
+      <!--<h3>What Makes me Angry</h3>
+      <p>
+One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce/status/626960212210008064" target="_blank">Bad forms</a>, both offline and online are representative of evil or negligent organisations that don’t care about people. Asking users to fill in details the system already know, or can find out context shows disrespect. Forms that are difficult to understand, make people feel stupid and prevent them from getting their job done. Furthermore, they often violate privacy for the sake of marketing. 
+      </p>-->
+      <h3>How Can We Help Each Other</h3>
+      <p>
 I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
-</p>
-<p class="cta cta-main">
-  <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
-</p>
+      </p>
+      <p class="cta cta-main">
+      <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
+      </p>
+      <h3>What is an IRP</h3>
+      <p>
+The IRP (Industry Research Project) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio, equivalent to between 10 and 15,000 words. Elements of the portfolio should include work done with clients/within businesses.
+
+As part of their IRPs previous Hyper Island students have worked with large design firms like IDEO and AKQA, social-good focused companies like Impact Hub, and student-created organisations like The Pop-Up Agency. 
+      </p>      
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
         <span class="site-footer-credits">With help from <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
