--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce
 I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
       </p>
       <p class="cta cta-main">
-      <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
+      <a href="mailto:dessy@chongarova.com" class="btn">Sounds interesting? Let’s talk.</a>
       </p>
       <h3>What is an IRP</h3>
       <p>
@@ -46,7 +46,10 @@ The IRP (Industry Research Project) is the culmination of a Hyper Island Masters
       </p>
       <p> 
 As part of their IRPs previous Hyper Island students have worked with large design firms like IDEO and AKQA, social-good focused companies like Impact Hub, and student-created organisations like The Pop-Up Agency. 
-      </p>      
+      </p>  
+      <p class="cta cta-main">
+      <a href="mailto:dessy@chongarova.com" class="btn">Seriously, we need to talk.</a>
+      </p>    
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
         <span class="site-footer-credits">With help from <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
