--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
 The IRP (Industry Research Project) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio, equivalent to between 10 and 15,000 words. Elements of the portfolio should include work done with clients/within businesses.
       </p>
       <p> 
-As part of their IRPs previous Hyper Island students have worked with large design firms like IDEO and AKQA, social-good focused companies like Impact Hub, and student-created organisations like The Pop-Up Agency. 
+As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. 
       </p>  
       <p class="cta cta-main">
       <a href="mailto:dessy@chongarova.com" class="btn">Seriously, we need to talk.</a>
