--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <p>
       My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can colaborate.
       </p>
+      <p>
+      <a href="mailto:dessy@chongarova.com" class="btn">Already convinced? Let’s talk.</a>
+      </p>  
     </section>
     <section class="main-content">
       <h3>My Experience</h3>
