--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@ One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce
       <h3>How Can We Help Each Other</h3>
       <p>
 I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
-      </p>
-      <p class="cta cta-main">
-      <a href="mailto:dessy@chongarova.com" class="btn">Sounds interesting? Let’s talk.</a>
-      </p>
       <h3>What is an IRP</h3>
       <p>
 The IRP (Industry Research Project) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio, equivalent to between 10 and 15,000 words. Elements of the portfolio should include work done with clients/within businesses.
@@ -51,7 +47,7 @@ The IRP (Industry Research Project) is the culmination of a Hyper Island Masters
 As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. 
       </p>  
       <p class="cta cta-main">
-      <a href="mailto:dessy@chongarova.com" class="btn">Seriously, we need to talk.</a>
+      <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
       </p>    
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
