--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is Dessy and I’m about to graduate from Hyper Island’s MA in Digital Experience Design. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can colaborate.
+      My name is Dessy and I’m about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can colaborate.
       </p>
       <p>
       <a href="mailto:dessy@chongarova.com" class="btn">Already convinced? Let’s talk.</a>
@@ -47,7 +47,7 @@ The IRP (Industry Research Project) is the culmination of a Hyper Island Masters
 As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. 
       </p>  
       <p class="cta cta-main">
-      <a href="mailto:dessy@chongarova.com" class="btn">Let’s talk!</a>
+      <a href="mailto:dessy@chongarova.com" class="btn">Seriously, let’s talk.</a>
       </p>    
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
