--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is Dessy and I’m about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
+      My name is <a href="http://chongarova.com/about/" target="_blank">Dessy</a> and I’m about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
       </p>
       <p>
       <a href="mailto:dessy@chongarova.com" class="btn">Already convinced? Let’s talk.</a>
