--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is <a href="http://chongarova.com/about/" target="_blank">Dessy</a> and I’m about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project which is like a work based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
+      My name is <a href="http://chongarova.com/about/" target="_blank">Dessy</a> and I’m about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project which is like a work-based thesis. I’d love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
       </p>
       <p>
       <a href="mailto:dessy@chongarova.com" class="btn">Already convinced? Let’s talk.</a>
@@ -44,14 +44,14 @@ I’d love to do UX work on FutureGov client and internal projects for up to 3 m
 The IRP (Industry Research Project) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio, equivalent to between 10 and 15,000 words. Elements of the portfolio should include work done with clients/within businesses.
       </p>
       <p> 
-As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. I want to work on this project with you.  
+As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. I want to work on my IRP with you.  
       </p>  
       <p class="cta cta-main">
       <a href="mailto:dessy@chongarova.com" class="btn">Seriously, let’s talk.</a>
       </p>    
       <footer class="site-footer">
         <span class="site-footer-owner">This page was created by <a href="https://twitter.com/des_cho" target="_blank">Dessy Chongarova</a> for the eyes of <a href="http://wearefuturegov.com" target="_blank">FutureGov.</span>
-        <span class="site-footer-credits">With help from <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
+        <span class="site-footer-credits">Based on <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>. Hosted on <a href="https://pages.github.com">GitHub Pages</a>.</span>
       </footer> 
     </section>
   </body>
