--- a/index.html
+++ b/index.html
@@ -21,31 +21,41 @@
       </p>  
     </section>
     <section class="main-content">
+      <h3>A Good Fit</h3>
+      <p>
+After <a href="https://medium.com/@des_cho/design-that-matters-ac0fdf9490aa" target="_blank">meeting Dom</a> at Hyper Island and chatting with Roxana at your summer party, I feel I know what FutureGov stands for. I appreciate the fact that you take your projects from design, through implementation, to the organisational changes needed for them to be successful. I am even more interested in your ventures since I believe that learning and design iterations should continue after a product has been launched.
+      </p>
+      <p>
+I’m passionate about bringing the high quality experiences of consumer market apps to areas that are underserved by design, like public services and enterprise technology. In the long term I hope to pioneer a user-centred approach to public services in my home country, Bulgaria, where design is not yet part of the conversation when it comes to government.
+      </p>
       <h3>My Experience</h3>
       <p>
-I’ve worked within multidisciplinary agile teams both in startup and agency environments. In startup world I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need. 
+I’ve worked as a UX designer within multidisciplinary agile teams both in startup and agency environments. In startup land I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need.
       </p>
       <p> 
 At Hyper Island I worked with clients like the BBC and Future Cities Catapult and I learned about co-design and prototyping with communities. I participated in and facilitated team development with techniques like feedback and reflection. You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
       </p>
-      <!--<h3>My Superpower</h3>
-      <p>
-People that I’ve worked with describe me as enthusiastic and proactive. But the truth is that I’m simply curios. This helps me dig into a topic until I find an insight I can empathise with. Working with clients and users, all I need is a real life problem to get me started. When I’m collaborating with designers, developers or business people, I’m interested in what gets them going and what I can learn about their work. Random day-to-day things that spark my curiosity sometimes end up on <a href="http://instagram.com/descho/" target="_blank">my Instagram feed</a>. 
-      </p>
-      <h3>What Makes me Angry</h3>
-      <p>
-One thing that makes me angry, are forms. <a href="https://twitter.com/allafarce/status/626960212210008064" target="_blank">Bad forms</a>, both offline and online are representative of evil or negligent organisations that don’t care about people. Asking users to fill in details the system already know, or can find out context shows disrespect. Forms that are difficult to understand, make people feel stupid and prevent them from getting their job done. Furthermore, they often violate privacy for the sake of marketing. 
-      </p>-->
-      <h3>How Can We Help Each Other</h3>
-      <p>
-I’d love to do UX work on FutureGov client and internal projects for up to 3 months full-time or 4 months part-time. I will shape my research project based on that experience. Parts of it can be in the shape of public blog posts, a design tool kit, or a prototype that can be of value for FutureGov. What I need from you will be regular feedback and a modest intern salary.
       <h3>What is an Industry Research Project</h3>
       <p>
-The IRP (Industry Research Project) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio, equivalent to between 10 and 15,000 words. Elements of the portfolio should include work done with clients/within businesses.
+The Industry Research Project (IRP) is the culmination of a Hyper Island Masters programme. We are expected to do research, formulate hypotheses, test them, and present a work-based project that adds value and challenges the industry. The output of the project can be a final report or a creative portfolio. Elements of the portfolio should include work done within businesses.
       </p>
       <p> 
 As part of their IRPs previous Hyper Island students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, social-good focused companies like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>, and student-created organisations like The <a href="http://thepopupagency.co/" target="_blank">Pop-Up Agency</a>. I want to work on my IRP with you.  
       </p>  
+      <h3>My Offer and Expectations</h3>
+      <p>
+        There are two main research areas that I’m interested in:
+        <ol>
+          <li>Applying human-centred design and agile methodologies in the domain of public services and social innovation. This area is more process-focused.</li>
+          <li>Inclusive design and accessibility. This has more to do with cognitive psychology and includes questions like: How to design for everybody? How does proficiency, age and culture influence a person’s experience with a product or service?</li>
+        </ol>
+      </p>
+      <p>
+These areas are intentionally broad for now. I plan to narrow my research question down based on the projects I’ll be working on and the needs of the organisation I partner with. If I work with FutureGov, I imagine spending 2/3 of the time doing UX/service design work on client and/or internal projects. And working on my research project the rest of the time. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
+      </p>
+      <p>
+What I’ll need from you is regular feedback and a modest intern salary. I am open to discussing all details.
+      </p>
       <p class="cta cta-main">
       <a href="mailto:dessy@chongarova.com" class="btn">Seriously, let’s talk.</a>
       </p>    
