--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I’m passionate about bringing the high quality experiences of consumer market 
       </p>
       <h3>My Experience</h3>
       <p>
-I’ve worked as a UX designer within multidisciplinary agile teams both in startup and agency environments. In startup land I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned telling clients that they don’t need what they think they need.
+I’ve worked as a UX designer within multidisciplinary agile teams both in startup and agency environments. In startup land I learned how a good process can help a team see purpose in their work. And in the agency I worked in, I learned how to tell clients that they don’t need what they think they need.
       </p>
       <p> 
 At Hyper Island I worked with clients like the BBC and Future Cities Catapult and I learned about co-design and prototyping with communities. I participated in and facilitated team development with techniques like feedback and reflection. You can find out more about my professional experience and skills from <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
