--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ As part of their IRPs previous students have worked with large design firms like
         </ol>
       </p>
       <p>
-These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I work with FutureGov, I imagine spending 2/3 of the time doing UX/service design work on client and/or internal projects. And working on my research project the rest of the time. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
+These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I were to work with FutureGov, I would imagine spending 3 days a week on doing UX and service design work with FutureGov client and internal projects. The remaining time would be spent on my research project. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
       </p>
       <p>
-What I’ll need from you is regular feedback and a modest intern salary. I am open to discussing all details.
+I hope the above interests you!
       </p>
       <p class="cta cta-main">
       <a href="mailto:dessy@chongarova.com" class="btn">Seriously, let’s talk.</a>
