--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="main-content">
       <h3>A Good Fit</h3>
       <p>
-After <a href="https://medium.com/@des_cho/design-that-matters-ac0fdf9490aa" target="_blank">meeting Dom</a> at Hyper Island and chatting with Roxana at your summer party, I feel I know what FutureGov stands for. I appreciate that you take your projects from design, through implementation, to the organisational changes needed for them to be successful. I am even more interested in your ventures, as I believe that learning and design iterations should continue after a product has been launched.
+After <a href="https://medium.com/@des_cho/design-that-matters-ac0fdf9490aa" target="_blank">meeting Dom</a> at Hyper Island and chatting with Roxana at your summer party, I feel I know what FutureGov stands for. I appreciate that you take your projects from design, through implementation, to organisational change. I am even more interested in your ventures, as I believe that learning and design iterations should continue after a product has been launched.
       </p>
       <p>
 I am passionate about bringing the high quality experiences of consumer market apps to areas that are underserved by design, like public services and enterprise technology. In the long term I hope to pioneer a user-centred approach to public services in my home country, Bulgaria, where design is not yet part of the conversation when it comes to government.
@@ -49,7 +49,7 @@ As part of their IRPs previous students have worked with large design firms like
         </ol>
       </p>
       <p>
-These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I were to work with FutureGov, I would imagine spending 3 days a week on doing UX and service design work with FutureGov client and internal projects. The remaining time would be spent on my research project. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
+These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I were to work with FutureGov, I would imagine spending 3 days a week on doing UX and service design work on FutureGov client and internal projects. The remaining time I would spent on my research project. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
       </p>
       <p>
 I hope the above interests you!
