--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dear Carrie & Dom,</p>
       <h1 class="project-name">Let’s work together!</h1>
       <p>
-      My name is <a href="http://chongarova.com/about/" target="_blank">Dessy</a> and I am about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project, which is like a work-based thesis. I would love to spend some of that time with FutureGov, because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
+      My name is <a href="http://chongarova.com/about/" target="_blank">Dessy</a> and I am about to graduate from Hyper Island’s <a href="https://www.hyperisland.com/programs-and-courses/ma-digital-experience-design" target="_blank">MA in Digital Experience Design</a>. From October to February I will be working on my Industry Research Project, which is like a work-based thesis. I would love to spend some of that time with FutureGov because I admire your work and your team’s dance moves! Please continue reading to find out how I think we can collaborate.
       </p>
       <p>
       <a href="mailto:dessy@chongarova.com" class="btn">Already convinced? Let’s talk.</a>
@@ -26,11 +26,11 @@
 After <a href="https://medium.com/@des_cho/design-that-matters-ac0fdf9490aa" target="_blank">meeting Dom</a> at Hyper Island and chatting with Roxana at your summer party, I feel I know what FutureGov stands for. I appreciate that you take your projects from design, through implementation, to organisational change. I am even more interested in your ventures, as I believe that learning and design iterations should continue after a product has been launched.
       </p>
       <p>
-I am passionate about bringing the high quality experiences of consumer market apps to areas that are underserved by design, like public services and enterprise technology. In the long term I hope to pioneer a user-centred approach to public services in my home country, Bulgaria, where design is not yet part of the conversation when it comes to government.
+I am passionate about bringing the high-quality experiences of consumer market apps to areas that are underserved by design, like public services and enterprise technology. In the long term, I hope to pioneer a user-centred approach to public services in my home country, Bulgaria, where design is not yet part of the conversation when it comes to government.
       </p>
       <h3>My Experience</h3>
       <p>
-I have worked as a UX designer within multidisciplinary agile teams in both startup and agency environments. In startup land I learned how a good process could help a team see purpose in their work. At the agency I worked in, I learned how to help clients discover what they and their users need.
+I have worked as a UX designer within multidisciplinary agile teams in both startup and agency environments. In startup land, I learned how a good process could help a team see purpose in their work. At the agency I worked in, I learned how to help clients discover what they and their users need.
       </p>
       <p> 
 At Hyper Island, through working with clients like the BBC and Future Cities Catapult, I learned about co-design and prototyping with communities. I participated in and facilitated team development using techniques like feedback and reflection. You can find out more about my professional experience and skills on <a href="https://uk.linkedin.com/in/descho" target="_blank">my LinkedIn profile</a>.
@@ -38,18 +38,18 @@ At Hyper Island, through working with clients like the BBC and Future Cities Cat
       <h3>What is an Industry Research Project</h3>
       <p>
 The Industry Research Project (IRP) is the culmination of a Hyper Island Masters programme. We are expected to do research, come up with hypotheses, test them, and present a work-based thesis that adds value and challenges the industry. The output of the project could be a final report or a creative portfolio.
-As part of their IRPs previous students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, and social-good focused organisations like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>. I want to work on my IRP with you.  
+As part of their IRPs, previous students have worked with large design firms like <a href="http://www.ideo.com/uk/" target="_blank">IDEO</a> and <a href="http://www.akqa.com/" target="_blank">AKQA</a>, and social-good focused organisations like <a href="http://www.impacthub.net/" target="_blank">Impact Hub</a>. I want to work on my IRP with you.  
       </p>  
       <h3>In Practice</h3>
       <p>
         There are two main research areas that I am interested in:
         <ol>
           <li>Applying human-centred design and agile methodologies in the domain of public services and social innovation. This area is more process-focused.</li>
-          <li>Inclusive design and accessibility. This has more to do with cognitive psychology. It includes questions like: How to design for everybody? How do skills, age and culture influence a person’s experience with a product or service?</li>
+          <li>Inclusive design and accessibility. This has more to do with cognitive psychology. It includes questions like: How to design for everybody? How does skill, age and culture influence a person’s experience with a product or service?</li>
         </ol>
       </p>
       <p>
-These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I were to work with FutureGov, I would imagine spending 3 days a week on doing UX and service design work on FutureGov client and internal projects. The remaining time I would spent on my research project. The output of my research may include blog posts, tool kits, or prototypes that I believe will be of value for FutureGov.
+These areas are broad on purpose for now. I plan to narrow my research question down based on the projects I will be working on and the needs of the organisation I partner with. If I were to work with FutureGov, I would imagine spending 3 days a week on doing UX and service design work on FutureGov client and internal projects. The remaining time I would spent on my research project. The output of my research may include blog posts, toolkits, or prototypes that I believe will be of value for FutureGov.
       </p>
       <p>
 I hope the above interests you!
